[package]
name = "wye-impl"
version = "0.1.0"
edition = "2021"
rust = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "*"
quote = "1"
syn = { version = "1", features = [ "extra-traits", "full", "visit", "visit-mut" ] }

[dev-dependencies]
pretty_assertions = "*"
trybuild = "*"
wye = { path = ".." }
